# ICD-11-code-normalizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py  schemas.py
app/cli/: main.py
app/core/: auth.py  config.py  logging.py  observability.py
app/db/: init_db.py  models.py  session.py
app/services/: ai_phrase.py  cache.py  importer.py  normalizer.py  ocl_sync.py  results_store.py  title_builder.py
scripts/: bootstrap_container.py  entrypoint.sh  seed_simple_tabulation.py
tests/: conftest.py  test_api.py  test_config.py  test_importer.py  test_normalized_results.py  test_normalizer.py  test_ocl_sync.py  test_schemas.py
